// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User Menu component > when no quota and email is set > the user menu does not contain a quota 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span> <span data-v-08f1b1e7="" class="oc-text-small">test@test.de</span>
        <!--v-if--></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when no quota and no email is set > the user menu does not contain a quota 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper oc-py-xs"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span>
        <!--v-if-->
        <!--v-if--></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when quota and no email is set > renders a navigation without email 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper oc-py-xs"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span>
        <!--v-if-->
        <div data-v-08f1b1e7="" class="storage-wrapper oc-flex oc-flex-bottom oc-mt-xs">
          <oc-icon-stub data-v-08f1b1e7="" name="hard-drive-2" size="small" fill-type="line" class="oc-mr-xs"></oc-icon-stub>
          <div data-v-08f1b1e7="">
            <p data-v-08f1b1e7="" class="oc-my-rm"><span data-v-08f1b1e7="" class="storage-wrapper-quota oc-text-small">300 B of 1 kB used (30%)</span></p>
            <oc-progress-stub data-v-08f1b1e7="" max="100" size="small" variation="primary" value="30"></oc-progress-stub>
          </div>
        </div></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when quota is above 80% and below 90% > renders a warning quota progress bar 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span> <span data-v-08f1b1e7="" class="oc-text-small">test@test.de</span>
        <div data-v-08f1b1e7="" class="storage-wrapper oc-flex oc-flex-bottom oc-mt-xs">
          <oc-icon-stub data-v-08f1b1e7="" name="hard-drive-2" size="small" fill-type="line" class="oc-mr-xs"></oc-icon-stub>
          <div data-v-08f1b1e7="">
            <p data-v-08f1b1e7="" class="oc-my-rm"><span data-v-08f1b1e7="" class="storage-wrapper-quota oc-text-small">810 B of 1 kB used (81%)</span></p>
            <oc-progress-stub data-v-08f1b1e7="" max="100" size="small" variation="warning" value="81"></oc-progress-stub>
          </div>
        </div></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when quota is above 90% > renders a danger quota progress bar 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span> <span data-v-08f1b1e7="" class="oc-text-small">test@test.de</span>
        <div data-v-08f1b1e7="" class="storage-wrapper oc-flex oc-flex-bottom oc-mt-xs">
          <oc-icon-stub data-v-08f1b1e7="" name="hard-drive-2" size="small" fill-type="line" class="oc-mr-xs"></oc-icon-stub>
          <div data-v-08f1b1e7="">
            <p data-v-08f1b1e7="" class="oc-my-rm"><span data-v-08f1b1e7="" class="storage-wrapper-quota oc-text-small">910 B of 1 kB used (91%)</span></p>
            <oc-progress-stub data-v-08f1b1e7="" max="100" size="small" variation="danger" value="91"></oc-progress-stub>
          </div>
        </div></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when quota is below 80% > renders a primary quota progress bar 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span> <span data-v-08f1b1e7="" class="oc-text-small">test@test.de</span>
        <div data-v-08f1b1e7="" class="storage-wrapper oc-flex oc-flex-bottom oc-mt-xs">
          <oc-icon-stub data-v-08f1b1e7="" name="hard-drive-2" size="small" fill-type="line" class="oc-mr-xs"></oc-icon-stub>
          <div data-v-08f1b1e7="">
            <p data-v-08f1b1e7="" class="oc-my-rm"><span data-v-08f1b1e7="" class="storage-wrapper-quota oc-text-small">300 B of 1 kB used (30%)</span></p>
            <oc-progress-stub data-v-08f1b1e7="" max="100" size="small" variation="primary" value="30"></oc-progress-stub>
          </div>
        </div></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when quota is not defined > renders no percentag of total and no progress bar 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span> <span data-v-08f1b1e7="" class="oc-text-small">test@test.de</span>
        <div data-v-08f1b1e7="" class="storage-wrapper oc-flex oc-flex-bottom oc-mt-xs">
          <oc-icon-stub data-v-08f1b1e7="" name="hard-drive-2" size="small" fill-type="line" class="oc-mr-xs"></oc-icon-stub>
          <div data-v-08f1b1e7="">
            <p data-v-08f1b1e7="" class="oc-my-rm"><span data-v-08f1b1e7="" class="storage-wrapper-quota oc-text-small">910 B used</span></p>
            <!--v-if-->
          </div>
        </div></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when quota is unlimited > renders no percentag of total and no progress bar 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <avatar-image-stub data-v-08f1b1e7="" class="oc-topbar-avatar oc-topbar-personal-avatar oc-flex-inline oc-flex-center oc-flex-middle" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="" class="profile-info-wrapper oc-pl-s">
        <avatar-image-stub data-v-08f1b1e7="" width="32" userid="einstein" user-name="Albert Einstein"></avatar-image-stub> <span data-v-08f1b1e7="" class="profile-info-wrapper"><span data-v-08f1b1e7="" class="oc-display-block">Albert Einstein</span> <span data-v-08f1b1e7="" class="oc-text-small">test@test.de</span>
        <div data-v-08f1b1e7="" class="storage-wrapper oc-flex oc-flex-bottom oc-mt-xs">
          <oc-icon-stub data-v-08f1b1e7="" name="hard-drive-2" size="small" fill-type="line" class="oc-mr-xs"></oc-icon-stub>
          <div data-v-08f1b1e7="">
            <p data-v-08f1b1e7="" class="oc-my-rm"><span data-v-08f1b1e7="" class="storage-wrapper-quota oc-text-small">300 B used</span></p>
            <!--v-if-->
          </div>
        </div></span>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-logout" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="logout-box-r" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log out</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;

exports[`User Menu component > when user is not logged in > renders a navigation with login button 1`] = `
"<nav data-v-08f1b1e7="" aria-label="Account menu">
  <oc-button-stub data-v-08f1b1e7="" id="_userMenuButton" class="oc-topbar-personal" appearance="raw" aria-label="My Account">
    <div data-v-08f1b1e7="" data-test-item-name="User Menu login" aria-hidden="true" focusable="false" class="oc-topbar-avatar oc-topbar-unauthenticated-avatar oc-flex-inline oc-flex-center oc-flex-middle"><span class="oc-avatar-item" style="background-color: var(--oc-color-swatch-brand-contrast); --icon-color: var(--oc-color-swatch-brand-default); --width: 32px;"><oc-icon-stub name="user" filltype="line" accessiblelabel="" type="span" size="small" variation="passive" color=""></oc-icon-stub></span></div>
  </oc-button-stub>
  <oc-drop-stub data-v-08f1b1e7="" drop-id="account-info-container" toggle="#_userMenuButton" mode="click" close-on-click="" padding-size="small" class="oc-overflow-hidden">
    <oc-list-stub data-v-08f1b1e7="" class="user-menu-list">
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-manage" type="router-link" to="[object Object]" appearance="raw">
          <oc-icon-stub data-v-08f1b1e7="" name="settings-4" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Preferences</span>
        </oc-button-stub>
      </li>
      <li data-v-08f1b1e7="">
        <oc-button-stub data-v-08f1b1e7="" id="oc-topbar-account-login" appearance="raw" type="router-link" to="[object Object]">
          <oc-icon-stub data-v-08f1b1e7="" name="login-box" fill-type="line" class="oc-p-xs"></oc-icon-stub> <span data-v-08f1b1e7="">Log in</span>
        </oc-button-stub>
      </li>
    </oc-list-stub>
    <!--v-if-->
  </oc-drop-stub>
</nav>"
`;
